# RTOS

./: arm32  midgard.cfg
kernel/: .gitignore  linker.ld  meson.build
kernel/.cache/clangd/index/: main.cpp.A373EA2824CA0639.idx
kernel/include/: kern.hpp
kernel/include/hw/stm32f7/: stm32f769xx.h  system_stm32f7xx.h  uart.hpp
kernel/include/kern/container/: array.hpp  linked_list.hpp
kernel/include/kern/helpers/: mem_util.hpp
kernel/include/kern/mem/: allocator.hpp
kernel/include/kern/scheduler/: scheduler.hpp
kernel/source/: main.cpp
kernel/source/hw/stm32f7/: uart.cpp
kernel/source/init/: startup.s  vtor.s
kernel/source/scheduler/: scheduler.cpp
